[tool.poetry]
name = "multicall"
version = "0.4.0"
description = "aggregate results from multiple ethereum contract calls"
authors = ["banteg <banteeg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
web3 = { git = "https://github.com/bitrocks/web3.py.git", branch = "support-geth-debug-api" }

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^4.0.1"
black = "^21.12b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
